Port forward 4.7.5.x changes